<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c4"
        android:padding="12sp"
        android:text="@string/dia_title_edit"
        android:textColor="@color/c1"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item"
        android:orientation="vertical"
        android:padding="24sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_book_title"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dialog_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/dia_book_title_placeholder"
            android:inputType="text"
            android:padding="8sp"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/dia_book_author"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/dialog_book_author"
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/dia_book_publisher"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/dialog_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/dia_book_genre"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/dialog_book_genre"
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/dia_book_price"
            android:textColor="@color/c4"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dialog_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/dia_book_price_placeholder"
            android:inputType="numberDecimal"
            android:padding="8sp"
            android:textColor="@color/c4"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c4"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_item"
            android:text="@string/dia_btn_save" />

        <Button
            android:id="@+id/dialog_btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_item"
            android:text="@string/dia_btn_delete" />

        <Button
            android:id="@+id/dialog_btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_item"
            android:text="@string/dia_btn_cancel" />
    </LinearLayout>
</LinearLayout>