<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    tools:context=".activity.SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_library_books_200"
            app:tint="@color/c4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8sp"
            android:text="@string/ac_setup_title"
            android:textColor="@color/c4"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38sp"
            android:background="@drawable/bg_home_welcome"
            android:text="@string/ac_login_username"
            android:textColor="@color/c4"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_list_item"
            android:hint="@string/ac_login_username_placeholder"
            android:inputType="text"
            android:text="admin"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:background="@drawable/bg_home_welcome"
            android:text="@string/ac_login_password"
            android:textColor="@color/c4"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/bg_list_item"
            android:hint="@string/ac_login_password_placeholder"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="18sp"
            android:background="@drawable/bg_menu_item"
            android:text="@string/ac_login_btn_setup"
            android:textColor="@color/c4"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>