<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_item"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lv_rentals_item_member_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c4"
        android:padding="6sp"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:text="{rental_member_name}"
        android:textColor="@color/c1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/lv_item_rental_book"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/lv_rentals_item_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="{rental_book_title}"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/lv_item_rental_librarian"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/lv_rentals_item_manager_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="{rental_book_librarian_username}"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/lv_item_rental_price"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/lv_rentals_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="{rental_book_price}"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/lv_item_rental_date_from"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/lv_rentals_item_date_start"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="{rental_date_start}"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/lv_item_rental_date_to"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/lv_rentals_item_date_end"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="{rental_date_end}"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lv_item_rental_status"
            android:textColor="@color/c4"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/lv_rentals_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/c4"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/lv_item_rental_status_placeholder"
            android:textColor="@color/c4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
